tests/NormalTests/paczka1/fuzzy1/86524423.err
Error in line 5: 1R6w S862 -1,2
Error in line 1: QSBjlrRV S507 95,1
Error in line 2: 1R6w S862 39,2
Error in line 6: P1TaZQLz S507 77,1
Error in line 17: zPUIUWF S862 21,5
Error in line 21: QSBjlrRV S507 39,6
Error in line 23: I3efgKSB7 S507 57,1
Error in line 32: cr70T0cOV S434 -2,1
Error in line 35: I3efgKSB7 A75 13,
